templates/grafana_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: prometheus
        image: grafana/grafana:7.3.7
        ports:
          - containerPort: 3000
        # Instead of a ConfigMap, let's just go to town with env vars:
        # https://grafana.com/docs/grafana/latest/administration/configuration/#configure-with-environment-variables
        volumeMounts:
          - name: provisioning
            mountPath: /etc/grafana/provisioning
            readOnly: true
          - name: dashboards
            mountPath: /var/lib/grafana/dashboards
            readOnly: true
      volumes:
        - name: provisioning
          configMap:
            name: grafana
            items:
              - key: data_source
                path: datasources/prometheus.yaml
              - key: dashboards
                path: dashboards/dashboards.yaml
        - name: dashboards
          configMap:
            name: grafana
            items:
              - key: dashboard_airdata
                path: airdata.json
              - key: dashboard_airscraper
                path: airscraper.json
