templates/awair_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awair
spec:
  selector:
    app: awair
  ports:
    - port: 8080
      targetPort: 8080
