templates/prometheus_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  type: NodePort # TODO use Ingress instead
  ports:
    - port: 9090
      targetPort: 9090
