templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - http:
      paths:
      - path: /prom
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
